Footer: embed alignment fix

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -31,6 +31,6 @@ footer .embed > div{
   padding-bottom: 20% !important;
   bottom: 35px;
 }
-footer h2:nth-of-type(2){
+#find-us-on-facebook{
   margin-top: 0;
 }
